# CrossPlatformMdlExporter

./: .gitignore  CMakeLists.txt  README  image_writer.cpp  image_writer.hpp  main.cpp  math.hpp  mdl_model.cpp  mdl_model.hpp  mdl_types.hpp  rasterizer.cpp  rasterizer.hpp
.github/workflows/: ci.yml
include/CrossPlatformMdlExporter/: mdl_model.hpp  rasterizer.hpp
src/: image_writer.cpp  main.cpp  mdl_model.cpp  rasterizer.cpp
